--- a/app.yaml
+++ b/app.yaml
@@ -2,12 +2,12 @@ name: simple-job
 region: nyc
 jobs:
   - name: hello-job
+    environment_slug: python
     git:
-      repo: https://github.com/<your-username>/<your-repo>
+      repo: https://github.com/Ajaykumar250/simple-job
       branch: main
       deploy_on_push: true
     run_command: "python job.py"
-    environment_slug: python
     instance_count: 1
     instance_size_slug: basic-xxs
-    schedule: "0 * * * *" # Runs every hour
+    schedule: "0 * * * *" # every hour
