--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -4,10 +4,10 @@ jobs:
   - name: hello-job
     environment_slug: python
     git:
-      repo: https://github.com/Ajaykumar250/simple-job
+      repo: Ajaykumar250/simple-job
       branch: main
       deploy_on_push: true
     run_command: "python job.py"
     instance_count: 1
     instance_size_slug: basic-xxs
-    schedule: "0 * * * *" # every hour
+    schedule: "0 * * * *"  # every hour
